--- a/godelian-site/src/app/app.component.html
+++ b/godelian-site/src/app/app.component.html
@@ -8,8 +8,8 @@
             <i class="fas fa-star text-warning fa-2x"></i>
           </div>
           <div>
-            <h1 class="h3 mb-0">{{ title }}</h1>
-            <p class="text-muted mb-0">Discover and analyze HTTP services across the web</p>
+            <h1 class="h3 mb-0">Godelian</h1>
+            <p class="text-muted mb-0">Indexing HTTP(S) services across the web</p>
           </div>
         </div>
         
@@ -63,21 +63,15 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <p class="mb-md-0">&copy; 2025 Godelian HTTP Mapper. Discover the web's hidden services.</p>
+          <p class="mb-md-0">Please use responsibly, not everything on the web is safe.</p>
         </div>
         <div class="col-md-6">
           <ul class="nav justify-content-md-end">
             <li class="nav-item">
-              <a href="#" class="nav-link text-white">
+              <a href="https://github.com/Jaminima/Godelian" class="nav-link text-white">
                 <i class="fab fa-github me-1"></i>
                 GitHub
               </a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link text-white">Documentation</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link text-white">API</a>
             </li>
           </ul>
         </div>
