--- a/godelian-site/src/app/app.component.html
+++ b/godelian-site/src/app/app.component.html
@@ -45,6 +45,12 @@
                 Header Stats
               </a>
             </li>
+            <li class="nav-item">
+              <a routerLink="/search" class="nav-link">
+                <i class="fas fa-search me-2"></i>
+                Search Features
+              </a>
+            </li>
           </ul>
         </div>
       </div>
